---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1040                                 -
---------------------------------------------
- 2020-11-01                                -
---------------------------------------------
.: WSM: Task: Quick Menu Page (WSM-220)

---------------------------------------------
- 2020-10-31                                -
---------------------------------------------
.: WSM: Task: Deployment (WSM-215)
.: WSM: BugFix: Reading url from backend issue (WSM-218)
.: WSM: BugFix: Fix store page issue (WSM-209)
.: WSM: BugFix: Fix contributor invitation issue (WSM-210)

---------------------------------------------
- 2020-10-25                                -
---------------------------------------------
.: WSM: BugFix: Profile Image with qrcode updated (WSM-209)
.: WSM: Task: Update Tracking URL (WSM-211)

---------------------------------------------
- 2020-10-24                                -
---------------------------------------------
.: WSM: Task: Settings Page (WSM-210)
.: WSM: Task: Reduce shop entry details (WSM-188)
.: WSM: Task: Update home control (WSM-207)

---------------------------------------------
- 2020-10-18                                -
---------------------------------------------
.: WSM: Task: Store Page (WSM-209)

---------------------------------------------
- 2020-10-17                                -
---------------------------------------------
.: WSM: Task: Home Control Page (WSM-207)
.: WSM: Task: Tracking Page (WSM-208)

---------------------------------------------
- 2020-10-16                                -
---------------------------------------------
.: WSM: Task: Add social medias (WSM-203)
.: WSM: Task: Change the flow from home to store page (WSM-200)

---------------------------------------------
- 2020-10-11                                -
---------------------------------------------