@@ -7,6 +7,7 @@
 - 2020-11-01                                -
 ---------------------------------------------
 .: WSM: Task: Quick Menu Page (WSM-220)
+.: WSM: Task: Prevent caching issue (WSM-221)
 
 ---------------------------------------------
 - 2020-10-31                                -
